--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body::before { content: ""; display: block; height: 40px; }
 :root{ --container-w: min(96vw, 1200px); }
 html, body { height:100%; }
 body{
-  margin:0; background:#770505; color:#f5f5f7;
+  margin:0; background:#f5f5f7; color:#f5f5f7;
   font-family:-apple-system,system-ui,Segoe UI,Roboto,sans-serif;
   -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
 }
