--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>Ocapì — Avicoli Macello 2025</title>
-
+<title>Ocapì — Avicoli Macello 2025</title> 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@700;800;900&display=swap" rel="stylesheet">
 <style>
 body::before { content: ""; display: block; height: 40px; }
 :root{ --container-w: min(96vw, 1200px); }
@@ -171,9 +173,61 @@ body{
   .ico-cal::before{mask:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M6 2h2v4H6zM16 2h2v4h-2z'/><rect x='3' y='4' width='18' height='17' rx='3'/><rect x='3' y='8' width='18' height='13'/></svg>");-webkit-mask:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M6 2h2v4H6zM16 2h2v4h-2z'/><rect x='3' y='4' width='18' height='17' rx='3'/><rect x='3' y='8' width='18' height='13'/></svg>")}
   .dot-blink{width:9px;height:9px;border-radius:50%;background:#f2cf57;display:inline-block;margin-right:8px;box-shadow:0 0 10px rgba(242,207,87,.9);animation:dotBlink .9s infinite alternate}
   @keyframes dotBlink{from{opacity:.45;transform:scale(.9)}to{opacity:1;transform:scale(1)}}
+</style><style>
+/* Barra superiore “Ocapì” */
+body::before { content:""; display:block; height:100px; } /* lascia spazio sotto la barra */
+
+.topbar {
+  position:fixed; top:0; left:0; right:0; height:92px;
+  display:flex; align-items:center; justify-content:center;
+  background:linear-gradient(180deg, rgba(10,10,11,.8), rgba(10,10,11,.55));
+  backdrop-filter:blur(10px) saturate(140%);
+  border-bottom:1px solid #262a30;
+  z-index:999;
+}
+.brand { display:flex; flex-direction:column; align-items:center; line-height:1; }
+.brand-title {
+  font-family:"Cairo Play", -apple-system, system-ui, Segoe UI, Roboto, sans-serif;
+  font-weight:900; font-size:46px; color:#f2cf57; text-transform:uppercase;
+  text-shadow:0 1px 0 #000, 0 0 10px rgba(242,207,87,.18);
+}
+.brand-title span {
+  display:inline-block; transform:translateY(14px) scale(.92); opacity:0;
+  animation:letterUp .6s cubic-bezier(.22,.72,.24,1) forwards;
+}
+.brand-title span:nth-child(1){animation-delay:.05s}
+.brand-title span:nth-child(2){animation-delay:.15s}
+.brand-title span:nth-child(3){animation-delay:.25s}
+.brand-title span:nth-child(4){animation-delay:.35s}
+.brand-title span:nth-child(5){animation-delay:.45s}
+
+@keyframes letterUp { to { transform:translateY(0) scale(1); opacity:1; } }
+
+.brand-sub {
+  font-size:12px; font-weight:700; color:#c7cacf; margin-top:10px;
+  opacity:0; filter:blur(2px);
+  animation:subRise .7s .6s cubic-bezier(.22,.72,.24,1) forwards;
+}
+@keyframes subRise { to { opacity:1; filter:blur(0); } }
+
+.blink {
+  display:inline-block; width:8px; height:8px; border-radius:50%;
+  background:#f2cf57; box-shadow:0 0 10px rgba(242,207,87,.9);
+  margin-right:6px; animation:blink .9s infinite alternate;
+}
+@keyframes blink { from{opacity:.5;transform:scale(.9)} to{opacity:1;transform:scale(1)} }
 </style>
 </head>
 <body>
+    <header class="topbar" role="banner">
+  <div class="brand">
+    <div class="brand-title" id="ocapiTitle">
+      <!-- Le lettere verranno animate via JS -->
+      <span>O</span><span>c</span><span>a</span><span>p</span><span>ì</span>
+    </div>
+<div class="brand-sub" id="brandSub"><span class="blink"></span>Sincronizzazione dati in corso…</div>
+  </div>
+</header>
 <section id="agenda" class="block" aria-labelledby="bl1">
   <h1 id="bl1" class="block-title">Blocco 1 • Agenda macellazione</h1>
   <div class="a-root" aria-label="Agenda macellazione">
@@ -714,9 +768,22 @@ function initLottie(){
   }
 })();
 </script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const sub = document.getElementById("brandSub");
+
+  // Dopo 3 secondi cambia il messaggio
+  setTimeout(() => {
+    const now = new Date();
+    const hh = now.getHours().toString().padStart(2,"0");
+    const mm = now.getMinutes().toString().padStart(2,"0");
+    sub.innerHTML = `<span class="blink"></span>ultimo aggiornamento: oggi, ${hh}:${mm}`;
+  }, 3000);
+});
+</script>
 
 <footer style="text-align:center;padding:24px 0;font-size:10px;color:#f6f6f7;letter-spacing:.3px;margin-top:40px;">
-  <em><strong>© Ocapì – La Bottega di Casterno 2025 – by PePe</strong></em>
+  <strong>© Ocapì – La Bottega di Casterno 2025 – designed by pepesprojects.com </strong>
 </footer>
 
 </body>
