--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@ body{
   @keyframes dotBlink{from{opacity:.45;transform:scale(.9)}to{opacity:1;transform:scale(1)}}
 </style><style>
 /* Barra superiore “Ocapì” */
-body::before { content:""; display:block; height:150px; } /* lascia spazio sotto la barra */
+body::before { content:""; display:block; height:130px; } /* lascia spazio sotto la barra */
 
 .topbar {
-  position:fixed; top:0; left:0; right:0; height:150px;
+  position:fixed; top:0; left:0; right:0; height:130px;
   display:flex; align-items:center; justify-content:center;
   background:linear-gradient(180deg, rgba(10,10,11,.8), rgba(10,10,11,.55));
   backdrop-filter:blur(10px) saturate(140%);
@@ -202,7 +202,7 @@ body::before { content:""; display:block; height:150px; } /* lascia spazio sotto
 .brand-title {
   font-family:"Cairo Play", -apple-system, system-ui, Segoe UI, Roboto, sans-serif;
   font-weight:900; font-size:46px; color:#f2cf57; text-transform:uppercase;
-  text-shadow:0 1px 0 #000, 0 0 10px rgba(242,207,87,.18); padding-top:50px;
+  text-shadow:0 1px 0 #000, 0 0 10px rgba(242,207,87,.18); padding-top:20px;
 }
 .brand-title span {
   display:inline-block; transform:translateY(64px) scale(.92); opacity:0;
@@ -274,7 +274,7 @@ body::before { content:""; display:block; height:150px; } /* lascia spazio sotto
       <table id="tabella">
         <thead>
           <tr>
-            <th></th><th>Oche</th><th>Anatre</th><th>Cap</th><th>Pol</th><th>Tot</th>
+            <th>Giorno</th><th>Oche</th><th>Anatre</th><th>Capp</th><th>Polli</th><th>Tot</th>
           </tr>
         </thead>
         <tbody></tbody>
