--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 
 <footer style="text-align:center;padding:24px 0;font-size:10px;color:#f6f6f7;letter-spacing:.3px;margin-top:40px;">
-  <strong>© Ocapì – La Bottega di Casterno 2025 – creata da P3P3 </strong>
+  <strong>© Ocapì – La Bottega di Casterno 2025 – creata da P3PE </strong>
 </footer>
 
 </body>
