--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@700;800;900&display=swap" rel="stylesheet">
+  
+<link rel="manifest" href="/bottega-avicoli/manifest.json">
+<link rel="apple-touch-icon" href="/bottega-avicoli/ocapi-logo-circle.png">
+<link rel="icon" href="/bottega-avicoli/ocapi-favicon-32.png" type="image/png" sizes="32x32">
+<meta name="theme-color" content="#770505">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Ocapì">
+
 <style>
 body::before { content: ""; display: block; height: 40px; }
 :root{ --container-w: min(96vw, 1200px); }
